force-app/main/default/objects/Reise__c/Reise__c.object-meta.xml
<CustomObject>
    <label>Reise</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reisen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>