force-app/main/default/objects/Reise__c/fields/Aktiv__c.field-meta.xml
<CustomField>
    <fullName>Aktiv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aktiv</label>
    <type>Checkbox</type>
</CustomField>