force-app/main/default/objects/Reise__c/fields/Anzahl_Teilnehmer_Interesse__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Teilnehmer_Interesse__c</fullName>
    <label>Anzahl Teilnehmer Interesse</label>
    <summaryFilterItems>
        <field>Teilnehmer__c.Status__c</field>
        <operation>equals</operation>
        <value>Interesse</value>
    </summaryFilterItems>
    <summaryForeignKey>Teilnehmer__c.Reise__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>