force-app/main/default/objects/Reise__c/fields/Anzahlung__c.field-meta.xml
<CustomField>
    <fullName>Anzahlung__c</fullName>
    <label>Anzahlung</label>
    <summarizedField>Teilnehmer__c.Anzahlungsbetrag__c</summarizedField>
    <summaryForeignKey>Teilnehmer__c.Reise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>