force-app/main/default/objects/Reise__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <label>BIC</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>