force-app/main/default/objects/Reise__c/fields/Ende__c.field-meta.xml
<CustomField>
    <fullName>Ende__c</fullName>
    <label>Ende</label>
    <required>true</required>
    <type>Date</type>
</CustomField>