force-app/main/default/objects/Reise__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>