force-app/main/default/objects/Reise__c/fields/Istkosten__c.field-meta.xml
<CustomField>
    <fullName>Istkosten__c</fullName>
    <label>Istkosten</label>
    <summarizedField>Teilnehmer__c.Istkosten_Gesamt__c</summarizedField>
    <summaryForeignKey>Teilnehmer__c.Reise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>