force-app/main/default/objects/Reise__c/fields/Plankosten__c.field-meta.xml
<CustomField>
    <fullName>Plankosten__c</fullName>
    <label>Plankosten</label>
    <summarizedField>Teilnehmer__c.Plankosten_Gesamt__c</summarizedField>
    <summaryForeignKey>Teilnehmer__c.Reise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>