force-app/main/default/objects/Reise__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Registration</label>
    <type>Checkbox</type>
</CustomField>