force-app/main/default/objects/Reise__c/fields/Rueckzahlbetrag__c.field-meta.xml
<CustomField>
    <fullName>Rueckzahlbetrag__c</fullName>
    <label>Rückzahlbetrag</label>
    <summarizedField>Teilnehmer__c.Rueckzahlbetrag__c</summarizedField>
    <summaryForeignKey>Teilnehmer__c.Reise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>