force-app/main/default/objects/Reise__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Anzahlung__c - Istkosten__c -  Rueckzahlbetrag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>