force-app/main/default/objects/Reise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Istkosten__c</columns>
    <columns>Plankosten__c</columns>
    <columns>Anzahlung__c</columns>
    <columns>Rueckzahlbetrag__c</columns>
    <columns>Anzahl_Teilnehmer_Best_tigt__c</columns>
    <columns>Anzahl_Teilnehmer_Bezahlt__c</columns>
    <columns>Anzahl_Teilnehmer_Interesse__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>